--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ketupat</title>
-<link rel="stylesheet" href="test.css">
+<link rel="stylesheet" href="index.css">
 <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet'>
 </head>
 <body>
